unpackaged/main/default/objects/Labor_Cost__c/Labor_Cost__c.object-meta.xml
<CustomObject>
    <label>Labor Cost</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Labor Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labor Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>