unpackaged/main/default/objects/Labor_Cost__c/fields/Double_Time_Rate__c.field-meta.xml
<CustomField>
    <fullName>Double_Time_Rate__c</fullName>
    <inlineHelpText>Double time rate related to this record.</inlineHelpText>
    <label>Double Time Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>