unpackaged/main/default/objects/Labor_Cost__c/fields/Over_Time_Rate__c.field-meta.xml
<CustomField>
    <fullName>Over_Time_Rate__c</fullName>
    <inlineHelpText>Over time rate related to this record.</inlineHelpText>
    <label>Over Time Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>