unpackaged/main/default/objects/Labor_Cost__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <inlineHelpText>Related price book of this record.</inlineHelpText>
    <label>Price Book</label>
    <type>TextArea</type>
</CustomField>