unpackaged/main/default/objects/Labor_Cost__c/fields/Regular_Rate__c.field-meta.xml
<CustomField>
    <fullName>Regular_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Regular rate related to this record.</inlineHelpText>
    <label>Regular Rate</label>
    <type>Checkbox</type>
</CustomField>